--- a/src/assets/styles/views/_footer.scss
+++ b/src/assets/styles/views/_footer.scss
@@ -5,9 +5,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  bottom: 0;
 
   &__content {
     color: $colorText-white;
     font-size: 14px;
+    text-align: center;
   }
 }
